--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.3.0",
     "jsonwebtoken": "^8.5.1",
